# actix-helloworld

./: Cargo.toml  LICENSE  README.md  doc.md
src/: main.rs
src/api/: configuration.rs  hello.rs  hello_world.rs  index.rs  mod.rs  not_found.rs
src/errors/: app_error.rs
src/schemas/: mod.rs  querys.rs  routes.rs
src/utils/: endpoints.rs  errors.rs  mod.rs  schemas.rs
