[package]
name = "actix-helloworld"
authors = ["Awiteb <awiteb@hotmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
derive-new = "0.5.9"
log = "0.4.16"
dotenv = "0.15.0"
env_logger = "0.6.1"
thiserror = "1.0.30"